Updated project structure and impl shell and commands Moved a few files to better organize the project.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,5 +5,16 @@ set(CMAKE_CXX_STANDARD 20)
 
 add_executable(MIME_OS src/main.cpp
         src/kernel/process/Process.cpp
-        include/Process.hpp)
+        include/Process.hpp
+        src/kernel/process/PCB.cpp
+        include/PCB.hpp
+        tests/test_process.cpp
+        src/kernel/logging/Logger.cpp
+        include/kernel/logging/Logger.hpp
+        include/utils/StringUtils.hpp
+        src/utils/StringUtils.cpp
+        src/shell/Commands.cpp
+        src/shell/Commands.cpp
+        include/shell/Shell.hpp
+        src/shell/Shell.cpp)
 
