--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,28 +1,39 @@
-cmake_minimum_required(VERSION 4.0)
+cmake_minimum_required(VERSION 3.20)
 project(MIME_OS)
 
 set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(MIME_OS src/main.cpp
+include_directories(include)
+
+
+set(OS_SOURCES
         src/kernel/process/Process.cpp
         src/kernel/process/ProcessManager.cpp
-        tests/test_process.cpp
+        src/kernel/process/Scheduler.cpp
+        src/kernel/memory/MemoryManager.cpp
         src/kernel/logging/Logger.cpp
-        include/kernel/logging/Logger.hpp
-        include/utils/StringUtils.hpp
-        src/utils/StringUtils.cpp
-        src/shell/Commands.cpp
-        src/shell/Commands.cpp
-        include/shell/Shell.hpp
-        src/shell/Shell.cpp
-        include/fileSystem/FSNode.hpp
-        include/fileSystem/Directory.hpp
-        include/fileSystem/File.hpp
         src/kernel/filesystem/File.cpp
         src/kernel/filesystem/Directory.cpp
-        include/fileSystem/FileSystem.hpp
         src/kernel/filesystem/FileSystem.cpp
-        include/process/ProcessManager.hpp
-        include/process/ProcessManager.hpp
-        include/process/Process.hpp)
+        src/utils/StringUtils.cpp
+        src/shell/Commands.cpp
+        src/shell/Shell.cpp
+        src/hardware/RAM.cpp
+)
 
+
+add_executable(MIME_OS
+        src/main.cpp
+        ${OS_SOURCES}
+)
+
+
+enable_testing()
+
+add_executable(TestRAM
+        tests/hardware/test_RAM.cpp
+        ${OS_SOURCES}
+)
+
+add_test(NAME RAM_Test COMMAND TestRAM)
